Fix board overflow bug on faded in and out board menu

--- a/src/trello/features/light-theme/body.scss
+++ b/src/trello/features/light-theme/body.scss
@@ -44,6 +44,7 @@ $transparent-width: 30%;
 }
 
 .board-wrapper {
+  overflow: hidden;
   z-index: 2;
 }
 
